feat: Optimize surface rules